fix logo jumping on page load

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -166,6 +166,7 @@ th {
 header img {
     width: 100%;
     max-height:140px;
+    min-height:140px;
 }
 
 header {
